--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 tokio = { version = "1", features = ["full"] }
 lazy_static = "1.4.0"
 sysinfo = "0.29.10"
+crossbeam-channel = "0.5.1"
