--- a/Client_2/Cargo.toml
+++ b/Client_2/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
+lazy_static = "1.4.0"
+sysinfo = "0.18.0"
+base64 = "0.21.5"
+image = "0.24.7"
+steganography = "1.0.2"
+show-image = "0.13.1"
+once_cell = "1.8.0"
